language/move-prover/tests/sources/functional/aborts_if_with_code_partial_error.exp
Move prover returns: exiting with boogie generation errors
error: `aborts_if_is_partial` is set but there are no abort codes specified with `aborts_with` to cover the codes of the unspecified abort cases

   ┌── tests/sources/functional/aborts_if_with_code_partial_error.move:8:5 ───
   │
 8 │     fun aborts_with_codes_partial(x: u64, y: u64): u64 {
   │     ^
   │
